router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__defer.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type

                ...@defer {
                    nonNullId
                }
            }
        }
        
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/... on /nonNullId"]
