router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__unauthenticated_request_defer.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: first_response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": {
        "id": 0
      }
    }
  }
}
